# mini-biai-1

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
benchmarks/: COMPREHENSIVE_BENCHMARK_SUITE_SUMMARY.md  COMPREHENSIVE_EVALUATION_SUITE_README.md  QUICK_START.md  README.md  benchmark_config.yaml  benchmark_suite_demo.py  comprehensive_benchmark_suite.py  comprehensive_evaluation_suite.py  evaluation_suite_demo.py  performance_dashboard.py  requirements.txt  run_benchmarks.py  stress_test_runner.py
configs/: .pre-commit-config.yaml  README.md  affect_expert_template.yaml  config_system_summary.py  config_validation_tools.py  language_expert_template.yaml  pylintrc  step1_base.yaml  step2_base.yaml  step3_complete.yaml  symbolic_expert_template.yaml  test_migrated.yaml  test_quickstart.yaml  tox.ini  vision_expert_template.yaml  workspace.json
deployment/: Makefile  README.md  config.json  production.yaml  requirements-dev.txt  requirements.txt
distributed/: README.md  __init__.py  checkpoint.py  data_loader.py  example_usage.py  monitor.py  optimizer.py  parallel.py  trainer.py
docs/: README.md  index.md
docs/api/: index.md
docs/architecture/: overview.md
docs/developer-guides/: index.md
docs/examples/: index.md
docs/tool_usage/: API_REFERENCE.md  USER_GUIDE.md
docs/training/: index.md
docs/user-guides/: index.md
examples/: README.md  __init__.py  analyze_test_results.py  auto_learning_demo.py  auto_learning_demo_working.py  comprehensive_auto_learning_demo.py  comprehensive_auto_learning_tests.py  dev-helper.py  performance_demo.py
examples/browser/: global_browser.py
examples/browser/browser_extension/error_capture/: content.js  injector.js
examples/tool_usage/: README.md  advanced_optimization_demo.py  basic_usage_demo.py  cross_platform_demo.py  integration_demo.py  learning_demo.py  run_all_tool_usage_demos.py  security_features_demo.py
reports/: AUTO_LEARNING_SYSTEM_README.md  CI-CD-PIPELINE-SUMMARY.md  COMPREHENSIVE_DEMO_COMPLETION_SUMMARY.md  DEMO_DOCUMENTATION.md  PROJECT_ORGANIZATION.md  README.md  ROOT_ORGANIZATION.md  STEP_2_COMPLETE_IMPLEMENTATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md
scripts/: CLI_QUICK_REFERENCE.md  CLI_README.md  README.md  TESTING_SETUP_COMPLETION_SUMMARY.md  TEST_INFRASTRUCTURE_SUMMARY.md  advanced_demo.sh  auto_learning_demo.sh  build_index.py  quick_demo.sh  run_all_demos.sh  setup-dev.sh  step_2_specification.md
src/: __init__.py  working_optimized_snn.py
src/affect/: README.md  __init__.py  ab_testing_framework.py  affect_logger.py  affect_types.py  comprehensive_enhanced_demo.py  demo.py  emotion_detector.py  enhanced_affect_integration.py  modulation_hooks.py
src/async/: README.md  __init__.py
src/async_processing/: __init__.py  async_queue.py  demo.py  integration.py  lazy_loading.py  offloading.py  pipeline.py  scheduler.py  streaming.py
src/coordinator/: __init__.py  optimized_snn.py
src/data_gatherer/: README.md  __init__.py
src/distributed/: README.md  __init__.py
src/edge/: README.md  __init__.py  accelerator.py  battery.py  edge_optimization_demo.py  onnx_export.py  optimization.py  progressive.py  quantization.py  tensorrt.py  webassembly.py
src/experts/: __init__.py
src/inference/: __init__.py
src/interfaces/: __init__.py  audio_interfaces.py  data_collection_interfaces.py  experts.py  learning_interfaces.py  memory_interfaces.py  messages.py  multimodal_interfaces.py  optimization_interfaces.py
src/language/: README.md  __init__.py  comprehensive_test.py  hybrid_processor.py  linear_attention.py  linear_text.py  mamba_ssm.py  performance_optimizer.py  ssm_backbone.py  ssm_text_processor.py  unified_ssm_interface.py  usage_examples.py  working_implementation.py
src/learning/: __init__.py  circuit_breakers.py  example_usage.py  learning_adaptation.py  metrics.py  online_learner.py  reinforcement_learning.py  replay_buffer.py  stdp.py
src/memory/: __init__.py  advanced_architectures.py  advanced_cache_hierarchy.py  efficient_attention.py  embedding_cache.py  hierarchical_memory.py  memory_pooling.py  optimized_faiss.py  prefetching_strategies.py  semantic_memory.py  stm.py  unified_memory_optimizer.py
src/meta_learning/: README.md  __init__.py  adapter.py  continual.py  demo.py  few_shot.py  maml.py  nas_integration.py  optimizer.py  tool_optimization.py
src/multimodal/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  attention.py  embeddings.py  retrieval.py
src/optimization/: __init__.py
src/tool_usage/: __init__.py  command_executor.py  platform_adapter.py  shell_detector.py  tool_registry.py  usage_optimizer.py
src/tool_usage/handlers/: __init__.py  bash_handler.py  cmd_handler.py  powershell_handler.py  ssh_handler.py  wsl_handler.py
src/tool_usage/security/: __init__.py  audit.py  integration.py  permissions.py  safety_modes.py  sandbox.py  validator.py
src/training/: __init__.py
src/utils/: __init__.py
tests/: README.md  conftest.py  final_optimization_demo.py  requirements.txt  run_tests.py  simple_affect_demo.py  test_affect.py  test_faiss.py
tests/tool_usage/: IMPLEMENTATION_SUMMARY.md  README.md  conftest.py  quick_test_runner.py  validate_tests.py
tests/tool_usage/compatibility/: test_cross_platform.py
tests/tool_usage/integration/: test_tool_usage_integration.py
tests/tool_usage/manual_tests/: run_manual_tests.py
tests/tool_usage/performance/: test_performance_load.py
tests/tool_usage/security/: test_security_safety.py
tests/tool_usage/unit/: test_command_executor.py  test_platform_adapter.py  test_shell_detector.py  test_tool_registry.py  test_usage_optimizer.py
